--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Task2vsk2"
-        tools:targetApi="31">
+        android:theme="@style/Theme.MyApp"
+        tools:targetApi="31"
+        android:background="@color/myBrightBlue"
+
+        >
 
         <!-- Main launcher -->
         <activity android:name=".MainActivity"
